Added signup function

--- a/api/package.json
+++ b/api/package.json
@@ -9,13 +9,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "colors": "^1.1.2",
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "kraken-js": "^2.2.0",
+    "mailgun-js": "^0.16.0",
     "moment": "^2.20.1",
-    "mongoose": "^5.0.7"
+    "mongoose": "^5.0.7",
+    "pug": "^2.0.1"
   }
 }
