--- a/api/config/config.json
+++ b/api/config/config.json
@@ -2,7 +2,8 @@
   "app": {
     "name": "WebSweeper API",
     "PORT": 3000,
-    "APP_DIR": "../dist"
+    "APP_DIR": "../dist",
+    "DOMAIN": "localhost:3000"
   }, 
   "mongo" : {
     "server": "mongodb://localhost/websweeper",
