--- a/api/package.json
+++ b/api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "api",
+  "name": "WebSweeperAPI",
   "version": "0.1.0",
   "description": "The API for the WebSweeper APP",
   "main": "index.js",
@@ -20,5 +20,12 @@
     "moment": "^2.20.1",
     "mongoose": "^5.0.7",
     "pug": "^2.0.1"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-jshint": "^2.1.0",
+    "gulp-util": "^3.0.8",
+    "jshint": "^2.9.5",
+    "jshint-stylish": "^2.2.1"
   }
 }
