--- a/api/package.json
+++ b/api/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "WebSweeperAPI",
+  "name": "web-sweeper-api",
   "version": "0.1.0",
   "description": "The API for the WebSweeper APP",
-  "main": "index.js",
+  "main": "api.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "gulp": "^3.9.1",
+    "gulp-apidoc": "^0.2.7",
     "gulp-jshint": "^2.1.0",
     "gulp-util": "^3.0.8",
     "jshint": "^2.9.5",
