--- a/api/package.json
+++ b/api/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "bcryptjs": "^2.4.3",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
@@ -20,6 +21,7 @@
     "moment": "^2.20.1",
     "mongoose": "^5.0.7",
     "pug": "^2.0.1",
+    "sanitizer": "^0.1.3",
     "z-schema": "^3.19.1"
   },
   "devDependencies": {
