--- a/api/package.json
+++ b/api/package.json
@@ -10,12 +10,12 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^1.0.3",
-    "bcryptjs": "^2.4.3",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "colors": "^1.1.2",
     "cors": "^2.8.4",
     "express": "^4.16.2",
+    "express-session": "^1.15.6",
     "kraken-js": "^2.2.0",
     "mailgun-js": "^0.16.0",
     "moment": "^2.20.1",
