--- a/api/config/config.json
+++ b/api/config/config.json
@@ -3,7 +3,7 @@
     "name": "WebSweeper API",
     "PORT": 3000,
     "APP_DIR": "../dist",
-    "DOMAIN": "localhost:3000"
+    "DOMAIN": "http://localhost:3000"
   },
   "mongo" : {
     "server": "mongodb://localhost/websweeper"
