--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,7 @@
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "colors": "^1.1.2",
+    "connect-mongodb-session": "^2.0.1",
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
