--- a/public/package.json
+++ b/public/package.json
@@ -21,6 +21,9 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "core-js": "^2.4.1",
+    "gulp": "^3.9.1",
+    "gulp-clean": "^0.4.0",
+    "gulp-sequence": "^1.0.0",
     "jquery": "^3.3.1",
     "ng-socket-io": "^0.2.4",
     "rxjs": "^5.1.0",
