--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
   "description": "The API for the WebSweeper APP",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app"
   },
   "author": "",
   "license": "ISC",
