should work with all routes now

--- a/api/config/config.json
+++ b/api/config/config.json
@@ -2,7 +2,7 @@
   "app": {
     "name": "WebSweeper API",
     "PORT": 3000,
-    "APP_DIR": "../dist",
+    "APP_DIR": ".build",
     "DOMAIN": "http://localhost:3000"
   },
   "mongo" : {
