--- a/api/package.json
+++ b/api/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^5.0.7",
     "pug": "^2.0.1",
     "sanitizer": "^0.1.3",
+    "sharp": "^0.20.1",
     "socket.io": "^2.0.4",
     "z-schema": "^3.19.1"
   },
