--- a/api/package.json
+++ b/api/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
+    "fs-extra": "^5.0.0",
     "gulp": "^3.9.1",
     "gulp-apidoc": "^0.2.7",
     "gulp-sequence": "^1.0.0",
