--- a/public/package.json
+++ b/public/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "color-hash": "^1.0.3",
     "core-js": "^2.4.1",
     "gulp": "^3.9.1",
     "gulp-clean": "^0.4.0",
