--- a/api/package.json
+++ b/api/package.json
@@ -26,6 +26,7 @@
     "mailgun-js": "^0.16.0",
     "moment": "^2.20.1",
     "mongoose": "^5.0.7",
+    "peer": "^0.2.8",
     "pug": "^2.0.1",
     "sanitizer": "^0.1.3",
     "sharp": "^0.20.1",
