--- a/public/package.json
+++ b/public/package.json
@@ -20,12 +20,14 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "angular2-materialize": "^15.1.10",
     "color-hash": "^1.0.3",
     "core-js": "^2.4.1",
     "gulp": "^3.9.1",
     "gulp-clean": "^0.4.0",
     "gulp-sequence": "^1.0.0",
     "jquery": "^3.3.1",
+    "materialize-css": "^0.100.2",
     "ng-socket-io": "^0.2.4",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
