--- a/api/config/config.json
+++ b/api/config/config.json
@@ -3,10 +3,10 @@
     "name": "WebSweeper API",
     "PORT": 3000,
     "APP_DIR": ".build",
-    "DOMAIN": "https://web-sweeper.herokuapp.com"
+    "DOMAIN": "http://localhost"
   },
   "mongo" : {
-    "server": "mongodb://admin:c09websweeper@ds125618.mlab.com:25618",
+    "server": "mongodb://localhost",
     "db": "websweeper"
   },
 
